hw/char: Add OXPCIe serial device
Adapted from serial-pci-multi to use memory mapped IO instead of port
io. Not an exact representation of a real OXPCIe954 card, but uses the
same mmio offsets.

Signed-off-by: Nicholas Chin <nic.c3.14@gmail.com>

--- a/hw/char/Kconfig
+++ b/hw/char/Kconfig
@@ -33,6 +33,12 @@ config SERIAL_PCI_MULTI
     depends on PCI
     select SERIAL
 
+config SERIAL_OXPCIE
+    bool
+    default y if PCI_DEVICES
+    depends on PCI
+    select SERIAL
+
 config VIRTIO_SERIAL
     bool
     default y
